# transpaer-knowledge

./: Cargo.toml  justfile
.github/workflows/: ci.yml
backend/: Cargo.toml  build.rs
backend/src/: config.rs  context.rs  db.rs  errors.rs  main.rs  models.rs  retrieve.rs  server.rs
collecting/: Cargo.toml
collecting/src/: bcorp.rs  categories.rs  consumers.rs  data.rs  errors.rs  eu_ecolabel.rs  fashion_transparency_index.rs  fetch_info.rs  lib.rs  open_food_facts.rs  open_food_repo.rs  sustainity.rs  tco.rs  transpaer.rs
collecting/tests/: data.rs  open_food_facts.rs  sustainity.rs  transpaer.rs
condenser/: Cargo.toml
condenser/src/: advisors.rs  analysis.rs  cache.rs  categories.rs  condensing.rs  config.rs  connecting.rs  data_collector.rs  errors.rs  filtering.rs  filtering_manufacturers.rs  filtering_products.rs  future_pool.rs  knowledge.rs  main.rs  prefiltering.rs  processing.rs  runners.rs  score.rs  sources.rs  targets.rs  transcribing.rs  utils.rs  wikidata.rs
condensing/: Cargo.toml
condensing/src/: advisors.rs  analysis.rs  cache.rs  commands.rs  condensing.rs  config.rs  connecting.rs  convert.rs  errors.rs  filtering.rs  knowledge.rs  lib.rs  parallel.rs  prefiltering.rs  processing.rs  runners.rs  score.rs  sources.rs  transcribing.rs  updating.rs  utils.rs  wikidata.rs
condensing/tests/: knowledge.rs
lab/: Cargo.toml
lab/src/: absorbing.rs  advisors.rs  analysis.rs  bcorp.rs  cache.rs  coagulate.rs  coagulating.rs  commands.rs  condensing.rs  config.rs  connecting.rs  convert.rs  crystalizing.rs  errors.rs  extracting.rs  filtering.rs  filtering1.rs  filtering2.rs  future_pool.rs  lib.rs  main.rs  oxidation.rs  parallel.rs  runners.rs  sampling.rs  score.rs  sources.rs  substrate.rs  traits.rs  updating.rs  utils.rs  wikidata.rs
models/: Cargo.toml
models/src/: buckets.rs  collections.rs  combine.rs  errors.rs  gather.rs  ids.rs  lib.rs  models.rs  read.rs  store.rs  transpaer.rs  utils.rs  write.rs
models/tests/: ids.rs  models.rs
wikidata/: Cargo.toml
wikidata/src/: data.rs  dump.rs  errors.rs  lib.rs  properties.rs  reader.rs
