[workspace]

resolver = "2"
members = [
    "wikidata",
    "models",
    "collecting",
    "lab",
    "backend",
]

[workspace.dependencies]
async-channel = { version = "1.8" }
async-trait = { version = "0.1.68" }
bzip2 = { version = "0.4" }
chrono = { version = "0.4", default-features = false }
clap = { version = "4.1" }
csv = { version = "1.1" }
derive-new = { version = "0.6" }
fern = { version = "0.6" }
flate2 = { version = "1.0" }
futures = { version = "0.3" }
humantime = { version = "2.1" }
hyper = { version = "0.14" }
indoc = { version = "2" }
isocountry = { version = "0.3.2" }
kv = { version = "0.24" }
log = { version = "0.4" }
maplit = { version = "1.0.2" }
md5 = { version = "0.7.0" }
merge = { version = "0.1" }
num_cpus = { version = "1.0" }
postcard = { version = "1.1", features = ["use-std"] }
pretty_assertions = { version = "1.4.0" }
rand = { version = "0.9" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
serde-jsonlines = { version = "0.4" }
serde_variant = { version = "0.1" }
serde_yaml = { version = "0.9" }
snafu = { version = "0.7" }
strsim = { version = "0.10.0" }
swagger = { version = "6.4" }
tempfile = { version = "3.10" }
thiserror = { version = "1.0" }
tokio = { version = "1.24" }

transpaer-api = { git = "https://github.com/transpaer/transpaer-api-rust.git", version = "0.1.0", tag = "v0.1.0", default-features = false }
# transpaer-api = { path = "../api-rust/transpaer_api", default-features = false }
transpaer-schema = { git = "https://github.com/transpaer/transpaer-schema-rust.git", version = "0.1.0", tag = "v0.1.0" }
# transpaer-schema = { path = "../schema-rust/transpaer-schema" }

transpaer-collecting = { path = "collecting" }
transpaer-condensing = { path = "condensing" }
transpaer-models = { path = "models" }
transpaer-wikidata = { path = "wikidata" }
