[package]
name = "sustainity-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
clap = { workspace = true }
fern = { workspace = true }
futures = { workspace = true }
humantime = { workspace = true }
hyper = { workspace = true, features = ["server"] }
log = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_variant = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
swagger = { workspace = true, features = ["serdejson", "server"] }
tokio = { workspace = true, features = ["full"] }

sustainity-api = { workspace = true, features = ["server"] }
sustainity-models = { workspace = true, features = ["into-api"] }

