[package]
name = "sustainity-collecting"
version = "0.1.0"
edition = "2021"

[dependencies]

csv = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serde_variant = { workspace = true }
thiserror = { workspace = true }

sustainity-schema = { workspace = true }

sustainity-wikidata = { path = "../wikidata" }
