[package]
name = "transpaer-collecting"
version = { workspace = true }
edition = { workspace = true }

[dependencies]

chrono = { workspace = true }
csv = { workspace = true }
flate2 = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde-jsonlines = { workspace = true }
serde_yaml = { workspace = true }
serde_variant = { workspace = true }
thiserror = { workspace = true }

transpaer-schema = { workspace = true }

transpaer-wikidata = { path = "../wikidata" }
