[package]
name = "sustainity-condenser"
version = "0.1.0"
edition = "2021"

[dependencies]

async-channel = { version = "1.8" }
async-trait = { version = "0.1.68" }
clap = { version = "4.1", features = ["derive"] }
csv = { version = "1.1" }
fern = { version = "0.6" }
log = { version = "0.4" }
merge = { version = "0.1.0" }
num_cpus = { version = "1.0" }
num = { version = "0.4.0" }
serde-jsonlines = { version = "0.4" }
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.9" }
strsim = { version = "0.10.0" }
thiserror = { version = "1.0" }
tokio = { version = "1.24", features = ["full"] }

sustainity-wikidata = { path = "../wikidata" }
sustainity-collecting = { path = "../collecting" }
