[package]
name = "sustainity-condensing"
version = "0.1.0"
edition = "2021"

[dependencies]

async-channel = { version = "1.8" }
async-trait = { version = "0.1.68" }
clap = { version = "4.1", features = ["derive"] }
csv = { version = "1.1" }
futures = { version = "0.3" }
isocountry = { version = "0.3.2" }
log = { version = "0.4" }
md5 = { version = "0.7.0" }
merge = { version = "0.1.0" }
num_cpus = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde-jsonlines = { version = "0.4" }
serde_variant = { version = "0.1.2" }
serde_yaml = { version = "0.9" }
strsim = { version = "0.10.0" }
thiserror = { version = "1.0" }

sustainity-wikidata = { path = "../wikidata" }
sustainity-collecting = { path = "../collecting" }
sustainity-models = { path = "../models" }

