[package]
name = "sustainity-models"
version = "0.1.0"
edition = "2021"

[dependencies]
isocountry = { workspace = true }
log = { workspace = true, optional = true }
md5 = { workspace = true }
merge = { workspace = true }
serde = { workspace = true, features = ["derive"] }
snafu = { workspace = true }

sustainity-api = { workspace = true, optional = true }
sustainity-schema = { workspace = true, optional = true }
sustainity-wikidata = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
serde_json = { workspace = true }
pretty_assertions = { workspace = true }

[features]
# TODO: move to the backend for better error handling
into-api = ["dep:sustainity-api", "dep:log"]
from-substrate = ["dep:sustainity-schema"]
