[package]
name = "transpaer-models"
version = "0.1.0"
edition = "2021"

[dependencies]
isocountry = { workspace = true }
kv = { workspace = true, features = ["json-value"] }
log = { workspace = true, optional = true }
md5 = { workspace = true }
merge = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true, features = ["derive"] }
snafu = { workspace = true }
thiserror = { workspace = true }

transpaer-api = { workspace = true, optional = true }
transpaer-schema = { workspace = true, optional = true }
transpaer-wikidata = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
maplit = { workspace = true }
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }

[features]
# TODO: move to the backend for better error handling
into-api = ["dep:transpaer-api", "dep:log"]
from-substrate = ["dep:transpaer-schema"]
