[package]
name = "transpaer-models"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
isocountry = { workspace = true }
itertools = { workspace = true }
kv = { workspace = true, features = ["json-value"] }
# TODO: Change to `tracing`.
log = { workspace = true, optional = true }
maplit = { workspace = true }
md5 = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true, features = ["derive"] }
snafu = { workspace = true }
thiserror = { workspace = true }

transpaer-api = { workspace = true, optional = true }
transpaer-schema = { workspace = true, optional = true }
transpaer-wikidata = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }

[features]
# TODO: move to the backend for better error handling
into-api = ["dep:transpaer-api", "dep:log"]
from-substrate = ["dep:transpaer-schema"]
