[package]
name = "sustainity-wikidata"
version = "0.1.0"
edition = "2021"

[dependencies]
bzip2 = { version = "0.4.4" }
flate2 = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
async-channel = { version = "1.8" }
thiserror = { version = "1.0" }
